--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@
 }
 /* Estilos del login*/
 .iconInto{
-    width:10%;
+    width:7%;
+    margin: 10px;
 }
 .loginView{
     display:flex;
@@ -25,8 +26,24 @@
     justify-content: center;
     align-items: center;
 }
-.iconInto{
+.textCreateAccount{
+    text-transform: uppercase;
+    padding: 10px;
+    border-radius: 20px;
+    border-color: rgb(82 19 80);
     margin: 10px;
+    background: #f4f7f9;
+    border-style: groove;
+}
+#footerPetworld{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
+    background: rgb(238,174,202);
+    background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(189,181,219,1) 55%, rgba(148,187,233,1) 100%);
 }
 
-
+/* @media screen (max-width:){
+    
+} */
