--- a/src/style.css
+++ b/src/style.css
@@ -60,11 +60,9 @@ header{
     background: #f4f7f9;
     border-style: groove;
 }
-/* 
-.hide{
-    display: none;
-} */
-/* .btnCreateAccountDestokp {
+
+
+.btnCreateAccountDestokp {
     text-transform: uppercase;
     padding: 10px;
     border-radius: 20px;
@@ -73,7 +71,11 @@ header{
     background: #f4f7f9;
     border-style: groove;
     display: none;
-} */
+}
+.registerPage{
+    display: none;
+}
+
 #footerPetworld{
     display:flex;
     align-items: center;
@@ -115,15 +117,20 @@ header{
     #footerPetworld{
         margin-bottom: 0px;
     }
-    /* .btnCreateAccount{
+    /* metodo 2 */
+    .btnCreateAccount{
     display: none;
     }
     .btnCreateAccountDestokp{
         display: block;
-    } */
-    /* .registerPage1, .registerPage2, .registerPage3, .registerPage4{
+    }
+    .registerPage1, .registerPage2, .registerPage3, .registerPage4{
         display: none;
-    } */
+    }
+    .registerPage{
+        display: block;
+    }
+   
 }
 
 
