--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-*{
+ *{
     margin:0;
     box-sizing: border-box;
     font-family: 'PT Sans', sans-serif
@@ -10,7 +10,7 @@
     justify-content: center;
 }
 
-#root, .containerMain{
+#root{
     display: flex;
     align-items: center;
     justify-content: center;
