--- a/src/style.css
+++ b/src/style.css
@@ -173,8 +173,11 @@
 
 .homeHeader{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100vw;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background: #EEECF6;
 }
 #headerImg{
     display: flex;
@@ -185,33 +188,47 @@
 }
 .homeNav{
     display: flex;
+    flex-direction: column;
     padding: 10px;
-    background-color: rgb(216, 89, 159);
+    background-color: #D7B5E2;
 }
 .homeBar1 {
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
     justify-content: space-evenly;
     list-style: none;
     padding: 5px;  
 }
 .homeBar2{
-    width: 5%;
     display: flex;
+    flex-direction: column;
     list-style: none;
     flex-grow: 1;
     justify-content: space-evenly;
-    align-items: center;
+    padding: 5px;
+    margin-top: 50px;
 }
 .homePage{
     height: 90vh;
 }
-.listNav{
+#logoHome{
+    width: 100%;
+}
+aside{
+    width: 40%;
+}
+.containerPost{
+    width: 60%;
+}
+.listNav, .listNav2{
     display: flex;
     align-items: center;
+    font-size: 12px;
 }
 .imgIcon{
     margin: 5px;
+    width: 10%;
 }
 
 .listNav:hover{
@@ -220,6 +237,17 @@
     transform: scale(1.1);
     border-radius: 5px;
     padding: 2px;
+}
+/* Estilos Menu hamburguesa */
+#menuHamb{
+    display: none;
+}
+
+#searchIcon::placeholder{
+    background-image: url(./img/iconsPost/buscar.png);
+    background-repeat: no-repeat;
+    background-size: 18px;
+    background-position: right;
 }
 
 /*Estilos para home*/
@@ -252,6 +280,12 @@
     }
     #footerPetworld{
         margin-bottom: 0px;
+    }
+    aside{
+        width: 20%;
+    }
+    .containerPost{
+        width: 80%;
     }
     /* .btnCreateAccount{
     display: none;
