--- a/src/style.css
+++ b/src/style.css
@@ -218,19 +218,12 @@ aside{
     padding: 2px;
 }
 /* Estilos Menu hamburguesa */
-#menuHamb{
-    display: none;
-}
 
-header label:hover{
+.iconHamb:hover{
     cursor: pointer;
 }
 .homeNav{
     display: none;
-}
-
-#menuHamb:checked ~ .homeNav{ 
-    margin-right: 0px;
 }
 
 #searchIcon::placeholder{
@@ -286,6 +279,12 @@ header label:hover{
     }
     .homeNav{
         display: block;
+    }
+    /* .hidden-nav{
+        display: none;
+    } */
+    .iconHamb {
+        display: none;
     }
     .header1{
         width: 50vw;
