function create post second part

--- a/src/style.css
+++ b/src/style.css
@@ -218,6 +218,9 @@ aside{
 .iconHamb:hover{
     cursor: pointer;
 }
+.homeNav{
+    display: none;
+}
 
 #searchIcon::placeholder{
     background-image: url(./img/iconsPost/buscar.png);
@@ -286,14 +289,14 @@ aside{
         height: 90vh;
     }
 
-    header label{
+    header label, #checkMenu{
         display: none;
     }
     .homeNav{
         display: block;
     }
-    /* .hidden-nav{
-        display: none;
+    /* .hide{
+        display: block;
     } */
     .iconHamb {
         display: none;
@@ -359,6 +362,6 @@ aside{
 .photoProfile{
     background-color: yellow;
 }
-.hide{
+/* .hide{
     display:none;
-}
+} */
