Showing post in home and logout

--- a/src/style.css
+++ b/src/style.css
@@ -308,8 +308,11 @@ aside{
 .selectIcons{
     display: flex;
 }
-.imgPost{
+.imgPost {
     width:20%;
+}
+.imgShowPost{
+    width:7%;
 }
 /*ESTILOS PARA RESET PASSWORD*/
 .headerReset{
