--- a/src/style.css
+++ b/src/style.css
@@ -225,6 +225,18 @@ aside{
     background-size: 18px;
     background-position: right;
 }
+
+.modalContainer_eliminar{
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #a39d9d99;
+    display: flex;
+    justify-content: center;
+}
+
 /*MODAL*/
 .modalContainer{
     /* display: none; */
@@ -235,7 +247,7 @@ aside{
     height: 100%;
     background-color: #a39d9d99;
     display: flex;
-    justify-content: center
+    justify-content: center;
 }
 .modalContent{
     background: beige;
@@ -268,7 +280,9 @@ aside{
 .mostrar{
     visibility: visible;
 }
-#btnCancel{
+
+
+.btnCancel{
     padding: 10px;
     background-color: rgb(223, 112, 22);
     color: #ffffff;
@@ -277,7 +291,8 @@ aside{
     margin: 15px;
     cursor: pointer;
 }
-#btnLogout{
+
+.btnOk{
     padding: 10px;
     background-color: rgb(62, 134, 90);
     color: #ffffff;
@@ -286,6 +301,8 @@ aside{
     margin: 15px;
     cursor: pointer;
 }
+
+
 /*Estilos para home*/
 .iconProfile{
     width:45%;
