--- a/src/style.css
+++ b/src/style.css
@@ -24,13 +24,10 @@
  *{
     margin:0;
     box-sizing: border-box;
-    /* font-family: 'PT Sans', sans-serif */
-    /* font-family: 'Kanit', sans-serif; */
-    /* font-family: 'Alegreya Sans SC', sans-serif; */
     font-family: 'Gentium Basic', serif;
 }
 .containerView, .containerRegister {
-    /* height: 90vh; */
+  
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -122,13 +119,6 @@
     color: #733B1A;
 }
 
-/* .iconDivLogin{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-} */
-
 .btnCreateAccount { 
     text-transform: uppercase;
     padding: 10px;
@@ -148,14 +138,7 @@
     justify-content: center;
     width: 50%;
 }
-/* .headerRegister{
-    background-color: white;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0px 300px 300px 0px;
-} */
+
 .registerPage,.fullName{
     display: flex;
     flex-direction: column;
@@ -207,14 +190,6 @@
     padding: 13px;
 }
 
-
-/* #dateBirth { 
-    margin:8px;
-    border-radius:15px;
-    width:50vw;
-    padding: 10px;
-} */
-
 #name, #lastName, #emailRegister, #passwordRegister, #repeatPassword {
     margin:8px;
     border-radius:15px;
@@ -236,6 +211,7 @@
     color: rgb(211 46 3);
     padding: 5px;
     font-weight: 600;
+    text-align: center;
 }
 .questionAccount, #backLogin{
     margin: 4.5%;
@@ -281,9 +257,9 @@
     padding: 5px;
     margin-top: 50px;
 }
-.homePage{
-    /* height: 90vh; */
-}
+/* .homePage{
+    
+} */
 #logoHome{
     width: 100%;
 }
